[package]
name = "gmmlib-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"
zip = "0.6.4"
